# riptide_msgs

./: CMakeLists.txt  README.md  package.xml
action/: ActuateDroppers.action  ActuateTorpedos.action  AlignTorpedos.action  ArmTorpedoDropper.action  BinsDive.action  CalibrateBuoyancy.action  CalibrateDrag.action  ChangeClawState.action  ExecuteTask.action  ExecuteTree.action  FollowTrajectory.action  SickTrick.action
msg/: AcousticsCommand.msg  AcousticsStatus.msg  ActuatorCommand.msg  ActuatorStatus.msg  ControllerCommand.msg  ControllerEnable.msg  Dvl.msg  ElectricalCommand.msg  ElectricalReadings.msg  FirmwareState.msg  KillSwitchReport.msg  LightingCommand.msg  PwmStamped.msg  RobotState.msg  TaskAlignment.msg  TreeStack.msg
srv/: GetRobotXacro.srv  ListTrees.srv
